fix: overflow on image tag component (#3622)
* fix: overflow on image tag component

* fix: updated snapshots

--- a/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactRepository/ArtifactConnector.module.scss
+++ b/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactRepository/ArtifactConnector.module.scss
@@ -119,3 +119,12 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
   margin-bottom: var(--spacing-small);
 }
+
+.tagInputButton {
+  :global(.bp3-button) {
+    overflow-wrap: anywhere;
+    height: auto !important;
+    max-height: initial !important;
+    padding-right: var(--spacing-xlarge) !important;
+  }
+}
